<resources>
    <string name="app_name">Popmovies</string>
    <string name="action_sort">Sort</string>
    <string name="most_popular">Most Popular</string>
    <string name="least_popular">Least Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="bottom_rated">Bottom Rated</string>
    <string name="action_show_pics">Show Pics</string>
    <string name="error_message">Failed to get results. No movies found!</string>
    <string name="query_movies">movies</string>
    <string name="query_movies_rated">movies_rated</string>
    <string name="query_trailers">trailers</string>
    <string name="youtube">YouTube</string>
    <string name="query_reviews">reviews</string>
    <string name="no_reviews">no reviews found</string>
    <string name="no_trailers">no trailers found</string>
    <string name="favorites">favorites</string>
    <string name="favorite">favorite</string>
    <string name="unfavorite">unfavorite</string>
    <string name="share">share</string>
</resources>
