<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" >
        <menu>
            <item android:id="@+id/top_rated" android:title="@string/top_rated" />
            <item android:id="@+id/bottom_rated" android:title="@string/bottom_rated"/>
            <item android:id="@+id/most_popular" android:title="@string/most_popular" />
            <item android:id="@+id/least_popular" android:title="@string/least_popular" />
            <item android:id="@+id/favorites" android:title="@string/favorites" />
        </menu>
    </item>
<!--    <item android:id="@+id/action_share"
        android:title="@string/share"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" ></item>-->
    <item android:id="@+id/action_show_pics"
        android:title="@string/action_show_pics"
        android:orderInCategory="3"
        android:checkable="true"
        android:checked="true"/>
</menu>